# wolfpack

./: .projections.json  Cargo.toml  LICENSE  README.md  clippy.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  configuration.md  events.md  extensions.md  pairing.md  protocol.md  security.md
src/: config.rs  lib.rs  main.rs
src/cli/: devices.rs  extension.rs  ipc.rs  mod.rs  pair.rs  send.rs  status.rs
src/client/: discovery.rs  mod.rs  relay.rs
src/crypto/: cipher.rs  keypair.rs  mod.rs
src/daemon/: api_token.rs  http_api.rs  ipc.rs  mod.rs  pairing.rs  run.rs  socket.rs  watcher.rs
src/events/: clock.rs  log.rs  mod.rs  storage.rs  types.rs
src/extensions/: build.rs  mod.rs  package.rs
src/net/: behaviour.rs  mod.rs  node.rs  protocol.rs
src/profile/: containers.rs  discovery.rs  extensions.rs  handlers.rs  mod.rs  mozlz4.rs  prefs.rs  search.rs  write_queue.rs
src/server/: discovery.rs  mod.rs  relay.rs
src/state/: db.rs  materialize.rs  mod.rs
src/sync/: diff.rs  engine.rs  merge.rs  mod.rs
